backend/back-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavilable: 1
      maxSurge: 1
  minReadySeconds: 20
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: ghcr.io/05-project/05-project-server:20241126-f5e207f
        name: backend-app
        port:
        - containerPort: 4000
