backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
spec:
  ingressClassName: nginx
  rules:
  - host: api.05-project.narumir.io
    http:
      paths:
      - backend:
          service:
            name: backend-service
            port:
              number: 4000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.05-project.narumir.io
    secretName: letsencrypt
